fix: adjust app height on mobile screen

--- a/style.css
+++ b/style.css
@@ -109,10 +109,8 @@ body {
         font-size: 2rem;
     }
     .percentage {
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: bold;
     }
-    .app {
-        max-height: 300px;
-    }
+    
 }
